# tree-sitter-metal

./: CMakeLists.txt  Cargo.toml  Makefile  go.mod  grammar.js  package.json  pyproject.toml  sample.metal  tree-sitter.json
bindings/go/: binding_test.go
bindings/python/tree_sitter_metal/: __init__.py
bindings/rust/: lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
