[package]
name = "tree-sitter-metal"
description = "Metal grammer for tree-sitter parsing"
version = "0.1.0"
authors = ["LuTheCoder <luthecoder@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "metal"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/lu-thecoder/tree-sitter-metal"
edition = "2024"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
